--- a/src/extension/extension.less
+++ b/src/extension/extension.less
@@ -92,6 +92,12 @@
             margin-right: 10px;
             overflow: hidden;
             float: left;
+            opacity: .01;
+            transition: opacity 200ms linear;
+
+            &_loaded {
+                opacity: 1;
+            }
 
             img {
                 width: 34px;
@@ -157,9 +163,7 @@
             vertical-align: middle;
             background: url('../assets/icons/close.png') no-repeat center;
             opacity: 0.45;
-            filter: alpha(opacity=45);
             cursor: pointer;
-            -o-transition: opacity 200ms linear;
             transition: opacity 200ms linear;
             display: inline-block;
 
@@ -186,20 +190,17 @@
             content: '';
             display: inline-block;
             opacity: 0.45;
-            filter: alpha(opacity=45);
             width: 12px;
             height: 12px;
             margin-left: 6px;
             margin-top: 2px;
             vertical-align: top;
             background: url('../assets/icons/plus.png') no-repeat 0 0;
-            -o-transition: opacity 200ms linear;
             transition: opacity 200ms linear;
         }
 
         &:hover:after {
             opacity: 1;
-            filter: none;
         }
     }
 }
