--- a/src/extension/extension.less
+++ b/src/extension/extension.less
@@ -61,6 +61,8 @@
         position: absolute;
         top: 1px;
         left: -1px;
+        max-height: 280px;
+        overflow: auto;
         border: 1px solid #c9d0d6;
         border-width: 0px 1px 1px;
         border-radius: 0 0 2px 2px;
